core/unpackaged/main/default/objects/LoggerSObjectHandler__mdt/LoggerSObjectHandler__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure Apex trigger handler classes in Nebula Logger that run on the included objects LogEntryEvent__e, LoggerScenario__c, Log__c, LogEntry__c, LogEntryTag__c, and LoggerTag__c</description>
    <label>Logger SObject Handler</label>
    <pluralLabel>Logger SObject Handlers</pluralLabel>
</CustomObject>