core/unpackaged/main/default/objects/LoggerSObjectHandler__mdt/fields/SObjectHandlerApexClass__c.field-meta.xml
<CustomField>
    <fullName>SObjectHandlerApexClass__c</fullName>
    <complianceGroup>None</complianceGroup>
    <inlineHelpText>The Apex class that extends the abstract LoggerSObjectHandler for the specified SObject Type</inlineHelpText>
    <label>Trigger Handler Apex Class</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>