core/unpackaged/main/default/objects/LoggerSObjectHandler__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>SObject Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Logger SObject Handler Configurations</relationshipLabel>
    <relationshipName>LoggerSObjectHandlerConfigurations</relationshipName>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>