core/unpackaged/main/default/objects/LoggerSObjectHandler__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsEnabled__c</columns>
    <columns>SObjectType__c</columns>
    <columns>SObjectTypeOverride__c</columns>
    <columns>SObjectHandlerApexClass__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>